@@ -11,6 +11,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 
 - Sistema de forja de itens
 - O comando `/inventario` foi dividido em 3 subcomandos, `/ver`, `/poções` e `/equipamentos`, você pode equipar diferentes armas, mochilas e armaduras em `/equipamentos`, usar suas poções em `/poções` e ver o inventário de jogadores em `/ver`
+- Adicionado a quantidade de itens no inventário no `/ficha` e `/inventário ver`
 
 ### Changed
 
